--- a/src/css/structure/modules/infragistics.ui.financialchart.css
+++ b/src/css/structure/modules/infragistics.ui.financialchart.css
@@ -60,8 +60,9 @@
 	display: flex;
 	display: -ms-flexbox;
 	align-items: center;
-	border-width: 1px;
-	border-style: solid;
+	border: 1px solid #dadada;
+	max-height: 45px;
+	background: #eeeeee;
 }
 
 .financialChartToolbar,
@@ -84,6 +85,14 @@
 .financialChartRangeSelectorLabel {
 	cursor: pointer;
 	height: 100%;
+}
+.financialChartRangeSelectorLabel:hover .financialChartRangeSelectorLabelSpan {
+	color: #4897AA;
+}
+
+.financialChartRangeSelectorLabel input:checked + span {
+	color: #444444;
+	background-color: #dadada;
 }
 
 .financialChartRangeSelectorLabelSpan {
@@ -111,19 +120,18 @@
 .financialChartTypePicker {
 	margin-left: auto;
 	height: 100%;
-	border-left-width: 1px;
-	border-left-style: solid;
+	border-left: 1px solid #dadada;
 }
 
 .financialChartIndicatorMenu {
 	height: 100%;
 	padding:0 10px;
-	border-right-width: 1px;
-	border-right-style: solid;
+	border-right: 1px solid #dadada;
 }
 
 .financialChartIndicatorMenuDropDownMenu,
 .financialChartTypePickerDropDownMenu {
+	background: #fff;
 	display: flex;
 	flex-direction: column;
 	z-index: 1;
@@ -134,6 +142,7 @@
 
 .financialChartIndicatorMenuDropDownMenu {
 	left:0;
+	min-width: 100px;
 	height: 300px;
 	overflow: auto;
 }
@@ -144,6 +153,11 @@
 
 .financialChartListItem {
 	cursor: pointer;
+}
+
+.financialChartListItem:hover,
+.financialChartListItem:focus {
+	color: #4897AA;
 }
 
 .financialChartListItem span {
@@ -174,6 +188,11 @@
 
 .financialChartIndicatorMenuDropDownMenuList {
 	font-weight: bold;
+}
+
+.financialChartIndicatorMenuDropDownMenu li.checked,
+.financialChartTypePickerDropDownMenu li.checked {
+	color: #4897AA;
 }
 
 .financialChartIndicatorMenuDropDownMenu ul,
@@ -218,33 +237,140 @@
 	font-size: 10px;
 }
 
-.ui-ChartButtonWrapepr .ui-icon-IndicatorsIcon{
-	margin-right: 5px;
-}
-
 .financialChartTypePickerDropDownButton {
 	background-color:transparent;
 	height: 100%;
 	padding: 0 10px;
 }
 
+.financialChartIndicatorMenulabel {
+	margin: 0 5px;
+}
+
+/* Icon styles if no theme is includet */
+.financialChartToolbar .ui-icon {
+	color: #888888;
+	width: 16px;
+	height: 16px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	text-indent: -99999px;
+	overflow: hidden;
+	position: relative;
+}
+.financialChartToolbar .ui-icon:before {
+	display: block;
+	height: 1em;
+	left: 50%;
+	line-height: 1;
+	margin-left: -0.5em;
+	margin-top: -0.5em;
+	position: absolute;
+	text-indent: 0;
+	top: 50%;
+	width: 1em;
+}
+
+.ui-icon-IndicatorsIcon:before {
+	content: url("data:image/svg+xml,%3Csvg id='Layer_1' data-name='Layer 1' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 55 55'%3E%3Cdefs%3E%3Cstyle%3E.cls-1{fill:#777777;}%3C/style%3E%3C/defs%3E%3Ctitle%3EArtboard 2%3C/title%3E%3Crect class='cls-1' x='46.32' y='16.34' width='5.97' height='38.47'/%3E%3Cpolygon class='cls-1' points='36.73 54.8 42.7 54.8 42.7 20.71 40.34 20.71 36.73 23.92 36.73 54.8'/%3E%3Cpolygon class='cls-1' points='27.14 30.07 27.14 54.8 33.11 54.8 33.11 27.15 28.46 31.28 27.14 30.07'/%3E%3Cpolygon class='cls-1' points='30.74 20.71 29.62 20.71 30.12 21.22 30.74 20.71'/%3E%3Cpolygon class='cls-1' points='17.55 26.49 17.55 54.8 23.52 54.8 23.52 26.76 20.26 23.78 17.55 26.49'/%3E%3Cpolygon class='cls-1' points='7.96 24.97 7.96 26.49 9.48 24.97 7.96 24.97'/%3E%3Cpolygon class='cls-1' points='7.96 54.8 13.93 54.8 13.93 30.11 7.96 36.08 7.96 54.8'/%3E%3Cpolygon class='cls-1' points='37.29 0.2 43.23 6.14 30.12 16.96 21.68 8.51 2.5 27.69 7.29 32.48 20.26 19.52 28.46 27.02 47.33 10.23 52.5 15.4 52.5 14.57 52.5 0.2 37.29 0.2'/%3E%3C/svg%3E");
+}
+
+.financialChartIndicatorMenuDropDownButton:hover .ui-icon-IndicatorsIcon:before,
+.financialChartIndicatorMenuDropDownButton:focus .ui-icon-IndicatorsIcon:before {
+	content: url("data:image/svg+xml,%3Csvg id='Layer_1' data-name='Layer 1' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 55 55'%3E%3Cdefs%3E%3Cstyle%3E.cls-1{fill:#4897AA;}%3C/style%3E%3C/defs%3E%3Ctitle%3EArtboard 2%3C/title%3E%3Crect class='cls-1' x='46.32' y='16.34' width='5.97' height='38.47'/%3E%3Cpolygon class='cls-1' points='36.73 54.8 42.7 54.8 42.7 20.71 40.34 20.71 36.73 23.92 36.73 54.8'/%3E%3Cpolygon class='cls-1' points='27.14 30.07 27.14 54.8 33.11 54.8 33.11 27.15 28.46 31.28 27.14 30.07'/%3E%3Cpolygon class='cls-1' points='30.74 20.71 29.62 20.71 30.12 21.22 30.74 20.71'/%3E%3Cpolygon class='cls-1' points='17.55 26.49 17.55 54.8 23.52 54.8 23.52 26.76 20.26 23.78 17.55 26.49'/%3E%3Cpolygon class='cls-1' points='7.96 24.97 7.96 26.49 9.48 24.97 7.96 24.97'/%3E%3Cpolygon class='cls-1' points='7.96 54.8 13.93 54.8 13.93 30.11 7.96 36.08 7.96 54.8'/%3E%3Cpolygon class='cls-1' points='37.29 0.2 43.23 6.14 30.12 16.96 21.68 8.51 2.5 27.69 7.29 32.48 20.26 19.52 28.46 27.02 47.33 10.23 52.5 15.4 52.5 14.57 52.5 0.2 37.29 0.2'/%3E%3C/svg%3E");
+}
+
+.ui-icon-toolbar-dd {
+	position: relative;
+	width: 16px;
+	height: 16px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+
+.ui-icon-toolbar-dd:before {
+	content: '';
+	position: absolute;
+	width: 0;
+	height: 0;
+	border-style: solid;
+	border-width: 5px 4px 0 4px;
+	border-color: #666 transparent transparent transparent;
+}
+
+.financialChartIndicatorMenuDropDownButton:hover .ui-icon-toolbar-dd:before,
+.financialChartIndicatorMenuDropDownButton:focus .ui-icon-toolbar-dd:before,
+.financialChartTypePickerDropDownButton:hover .ui-icon-toolbar-dd:before,
+.financialChartTypePickerDropDownButton:focus .ui-icon-toolbar-dd:before {
+	content: '';
+	border-color: #4897AA transparent transparent transparent;
+}
+
+.financialChartListItem[data-value='Auto'] {
+	padding-bottom: 5px;
+	border-bottom: 1px solid #ddd;
+	margin-bottom: 3px;
+}
+
+.financialChartTypePickerDropDownButton[data-value="Auto"] .ui-icon-chartAuto:before,
+.financialChartListItem[data-value='Auto'] .ui-icon-changeable:before,
+.financialChartListItem[data-value='Auto'] .ui-icon-chartAuto:before,
 .financialChartTypePickerDropDownButton[data-value="Auto"] .ui-icon-changeable:before {
-	content: "\e94c"
+	content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' %3E%3Cpath d='M 3 2 L 3 4 L 3 6 L 3 7 L 0 7 L 0 9 L 3 9 L 3 12 L 5 12 L 5 9 L 5 7 L 5 6 L 8 6 L 8 4 L 5 4 L 5 2 L 3 2 ZM 10 0 L 10 3 L 10 5 L 10 10 L 7 10 L 7 12 L 10 12 L 10 15 L 12 15 L 12 12 L 12 10 L 12 5 L 15 5 L 15 3 L 12 3 L 12 0 L 10 0 Z' fill='#777777' /%3E%3C/svg%3E");
 }
 
+.financialChartListItem[data-value='Auto']:hover .ui-icon-chartAuto:before,
+.financialChartListItem[data-value='Auto']:focus .ui-icon-chartAuto:before,
+.financialChartTypePickerDropDownButton[data-value='Auto']:hover .ui-icon-changeable:before,
+.financialChartTypePickerDropDownButton[data-value='Auto']:focus .ui-icon-changeable:before {
+	content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' %3E%3Cpath d='M 3 2 L 3 4 L 3 6 L 3 7 L 0 7 L 0 9 L 3 9 L 3 12 L 5 12 L 5 9 L 5 7 L 5 6 L 8 6 L 8 4 L 5 4 L 5 2 L 3 2 ZM 10 0 L 10 3 L 10 5 L 10 10 L 7 10 L 7 12 L 10 12 L 10 15 L 12 15 L 12 12 L 12 10 L 12 5 L 15 5 L 15 3 L 12 3 L 12 0 L 10 0 Z' fill='#4897AA' /%3E%3C/svg%3E");
+}
+
+.financialChartListItem[data-value='Bar'] .ui-icon-BarIcon:before,
 .financialChartTypePickerDropDownButton[data-value="Bar"] .ui-icon-changeable:before {
-	content:"\e92f";
+	content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' %3E%3Cpath d='M 3 2 L 3 4 L 3 6 L 3 7 L 0 7 L 0 9 L 3 9 L 3 12 L 5 12 L 5 9 L 5 7 L 5 6 L 8 6 L 8 4 L 5 4 L 5 2 L 3 2 ZM 10 0 L 10 3 L 10 5 L 10 10 L 7 10 L 7 12 L 10 12 L 10 15 L 12 15 L 12 12 L 12 10 L 12 5 L 15 5 L 15 3 L 12 3 L 12 0 L 10 0 Z' fill='#777777' /%3E%3C/svg%3E");
 }
 
+.financialChartTypePickerDropDownButton[data-value='Bar']:hover .ui-icon-changeable:before,
+.financialChartTypePickerDropDownButton[data-value='Bar']:focus .ui-icon-changeable:before,
+.financialChartListItem[data-value="Bar"]:hover .ui-icon-BarIcon:before,
+.financialChartListItem[data-value="Bar"]:focus .ui-icon-BarIcon:before {
+	content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' %3E%3Cpath d='M 3 2 L 3 4 L 3 6 L 3 7 L 0 7 L 0 9 L 3 9 L 3 12 L 5 12 L 5 9 L 5 7 L 5 6 L 8 6 L 8 4 L 5 4 L 5 2 L 3 2 ZM 10 0 L 10 3 L 10 5 L 10 10 L 7 10 L 7 12 L 10 12 L 10 15 L 12 15 L 12 12 L 12 10 L 12 5 L 15 5 L 15 3 L 12 3 L 12 0 L 10 0 Z' fill='#4897AA' /%3E%3C/svg%3E");
+}
+
+.financialChartListItem[data-value='Line'] .ui-icon-LineIcon:before,
 .financialChartTypePickerDropDownButton[data-value="Line"] .ui-icon-changeable:before {
-	content:"\e94d";
+	content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' %3E%3Cpath d='M 0 11.3333 L 1.6842 13 L 6.5 8.8125 L 9.5313 11.3438 L 16 5.5 L 14 3.5 L 9.5313 8.1875 L 6.5 5.625 L 0 11.3333 Z' fill='#777777' /%3E%3C/svg%3E");
 }
 
+.financialChartTypePickerDropDownButton[data-value='Line']:hover .ui-icon-changeable:before,
+.financialChartTypePickerDropDownButton[data-value='Line']:focus .ui-icon-changeable:before,
+.financialChartListItem[data-value="Line"]:hover .ui-icon-LineIcon:before,
+.financialChartListItem[data-value="Line"]:focus .ui-icon-LineIcon:before {
+	content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' %3E%3Cpath d='M 0 11.3333 L 1.6842 13 L 6.5 8.8125 L 9.5313 11.3438 L 16 5.5 L 14 3.5 L 9.5313 8.1875 L 6.5 5.625 L 0 11.3333 Z' fill='#4897AA' /%3E%3C/svg%3E");}
+
+.financialChartListItem[data-value='Candle'] .ui-icon-CandleIcon:before,
 .financialChartTypePickerDropDownButton[data-value="Candle"] .ui-icon-changeable:before {
-	content:"\e94a";
+	content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' %3E%3Cpath d='M 8 3 L 8 13 L 10 13 L 10 16 L 12 16 L 12 13 L 14 13 L 14 3 L 12 3 L 12 0 L 10 0 L 10 3 L 8 3 ZM 0 5 L 0 12 L 2 12 L 2 15 L 4 15 L 4 12 L 6 12 L 6 5 L 4 5 L 4 2 L 2 2 L 2 5 L 0 5 Z' fill='#777777' /%3E%3C/svg%3E");
 }
 
+.financialChartTypePickerDropDownButton[data-value='Candle']:hover .ui-icon-changeable:before,
+.financialChartTypePickerDropDownButton[data-value='Candle']:focus .ui-icon-changeable:before,
+.financialChartListItem[data-value="Candle"]:hover .ui-icon-CandleIcon:before,
+.financialChartListItem[data-value="Candle"]:focus .ui-icon-CandleIcon:before {
+	content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' %3E%3Cpath d='M 8 3 L 8 13 L 10 13 L 10 16 L 12 16 L 12 13 L 14 13 L 14 3 L 12 3 L 12 0 L 10 0 L 10 3 L 8 3 ZM 0 5 L 0 12 L 2 12 L 2 15 L 4 15 L 4 12 L 6 12 L 6 5 L 4 5 L 4 2 L 2 2 L 2 5 L 0 5 Z' fill='#4897AA' /%3E%3C/svg%3E");}
+
+.financialChartListItem[data-value='Column'] .ui-icon-ColumnIcon:before,
 .financialChartTypePickerDropDownButton[data-value="Column"] .ui-icon-changeable:before {
-	content:"\e94b";
+	content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' %3E%3Cpath d='M 0 16 L 3 16 L 3 11 L 0 11 L 0 16 ZM 11 16 L 11 2 L 8 2 L 8 16 L 11 16 ZM 15 16 L 15 4 L 12 4 L 12 16 L 15 16 ZM 7 16 L 7 6 L 4 6 L 4 16 L 7 16 Z' fill='#777777' /%3E%3C/svg%3E");
 }
 
+.financialChartTypePickerDropDownButton[data-value='Column']:hover .ui-icon-changeable:before,
+.financialChartTypePickerDropDownButton[data-value='Column']:focus .ui-icon-changeable:before,
+.financialChartListItem[data-value="Column"]:hover .ui-icon-ColumnIcon:before,
+.financialChartListItem[data-value="Column"]:focus .ui-icon-ColumnIcon:before {
+	content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' %3E%3Cpath d='M 0 16 L 3 16 L 3 11 L 0 11 L 0 16 ZM 11 16 L 11 2 L 8 2 L 8 16 L 11 16 ZM 15 16 L 15 4 L 12 4 L 12 16 L 15 16 ZM 7 16 L 7 6 L 4 6 L 4 16 L 7 16 Z' fill='#4897AA' /%3E%3C/svg%3E");
+}
