--- a/src/css/themes/bootstrap4/default/infragistics.theme.css
+++ b/src/css/themes/bootstrap4/default/infragistics.theme.css
@@ -2848,67 +2848,86 @@ body .ui-tooltip {
 }
 
 .financialChartToolbar .financialChartToolbar {
-  background: rgba(0, 0, 0, 0.12);
-  border-color: #eceeef;
+  background: rgba(0, 0, 0, 0.12) !important;
+  border-color: #eceeef !important;
 }
 .financialChartToolbar .financialChartToolbar .ui-icon {
-  color: #373a3c;
+  color: #373a3c !important;
+}
+.financialChartToolbar .financialChartToolbar .ui-icon-toolbar-dd:before {
+  content: "";
+  border-color: #373a3c transparent transparent transparent !important;
+}
+.financialChartToolbar .financialChartToolbar svg {
+  color: #373a3c !important;
 }
 
 .financialChartIndicatorMenuDropDownButton {
-  color: #373a3c;
+  color: #373a3c !important;
+}
+.financialChartIndicatorMenuDropDownButton:hover .ui-icon-toolbar-dd:before {
+  content: "";
+  border-color: #0275d8 transparent transparent transparent !important;
 }
 
 .financialChartIndicatorMenu {
-  color: #373a3c;
-  border-right-color: #eceeef;
+  color: #373a3c !important;
+  border-right-color: #eceeef !important;
 }
 .financialChartIndicatorMenu:hover .financialChartIndicatorMenuDropDownButton,
 .financialChartIndicatorMenu:hover .financialChartIndicatorMenuDropDownButton:after {
-  color: #0275d8;
+  color: #0275d8 !important;
 }
 
 .financialChartTypePicker {
-  border-left-color: #eceeef;
+  border-left-color: #eceeef !important;
 }
 
 .financialChartRangeSelectorLabel:hover .financialChartRangeSelectorLabelSpan {
-  color: #0275d8;
+  color: #0275d8 !important;
 }
 
 .financialChartRangeSelectorLabel input:checked + span {
-  color: #373a3c;
-  background-color: white;
+  color: #373a3c !important;
+  background-color: white !important;
 }
 
 .financialChartListItem:hover {
-  color: #0275d8;
+  color: #0275d8 !important;
 }
 .financialChartListItem:hover .ui-icon {
-  color: #0275d8;
+  color: #0275d8 !important;
 }
 
 .financialChartIndicatorMenuDropDownMenu,
 .financialChartTypePickerDropDownMenu {
-  background: #fff;
+  background: #fff !important;
 }
 
 .financialChartIndicatorMenuDropDownMenu li.checked,
 .financialChartTypePickerDropDownMenu li.checked {
-  color: #0275d8;
+  color: #0275d8 !important;
 }
 .financialChartIndicatorMenuDropDownMenu li.checked:before,
 .financialChartTypePickerDropDownMenu li.checked:before {
-  color: #0275d8;
+  color: #0275d8 !important;
 }
 .financialChartIndicatorMenuDropDownMenu li.checked:hover, .financialChartIndicatorMenuDropDownMenu li.checked:hover,
 .financialChartTypePickerDropDownMenu li.checked:hover,
 .financialChartTypePickerDropDownMenu li.checked:hover {
-  color: #025aa5;
+  color: #025aa5 !important;
 }
 
 .financialChartTypePickerDropDownButton:hover .ui-icon {
-  color: #0275d8;
+  color: #0275d8 !important;
+}
+.financialChartTypePickerDropDownButton:hover .ui-icon-toolbar-dd:before {
+  content: "";
+  border-color: #0275d8 transparent transparent transparent !important;
+}
+
+.financialChartListItem[data-value=Auto] {
+  border-bottom: 1px solid #eceeef !important;
 }
 
 /***********/
