--- a/src/css/themes/infragistics/icons-styles.css
+++ b/src/css/themes/infragistics/icons-styles.css
@@ -732,16 +732,6 @@
 .ui-igbutton-underline:before{content:"\e91f"}
 .ui-igbutton-viewsource-icon:before{content:"\e920"}
 
-/* Chart Toolbar */
-.ui-icon-BarIcon:before {content:"\e92f"}
-.ui-icon-CalendarIcon:before {content: "\e930"}
-.ui-icon-CandleIcon:before {content: "\e94a"}
-.ui-icon-ColumnIcon:before {content: "\e94b"}
-.ui-icon-IndicatorsIcon:before {content: "\e94c"}
-.ui-icon-LineIcon:before {content: "\e94d"}
-.ui-icon-SettingsIcon:before {content: "\e94e"}
-/* Chart Toolbar END */
-
 .ui-igspreadsheet-copy-icon:before {content:"\e688"}
 .ui-igspreadsheet-cut-icon:before {content:"\e689"}
 .ui-igspreadsheet-paste-icon:before {content:"\e68a"}
@@ -1417,5 +1407,34 @@
 .ui-igcheckbox-small-on,
 .ui-igcheckbox-verysmall-on,
 .ui-igcheckbox-large-on {
-/ / color: red
+    /*color: red*/
 }
+
+/* Chart Toolbar */
+[data-value="Bar"] .ui-icon-BarIcon,
+[data-value="Bar"] .ui-icon-changeable:before,
+.ui-icon-BarIcon:before {content:"\e92f"!important;}
+
+.ui-icon-CalendarIcon:before {content: "\e930"!important;}
+
+[data-value="Candle"] .ui-icon-CandleIcon,
+[data-value="Candle"] .ui-icon-changeable:before,
+.ui-icon-CandleIcon:before {content: "\e94a"!important;}
+
+[data-value="Column"] .ui-icon-ColumnIcon,
+[data-value="Column"] .ui-icon-changeable:before,
+.ui-icon-ColumnIcon:before {content: "\e94b"!important;}
+
+.ui-icon-IndicatorsIcon:before {content: "\e94c"!important;}
+
+[data-value="Auto"] .ui-icon-chartAuto,
+[data-value="Auto"] .ui-icon-changeable:before,
+.ui-icon-chartAuto:before {content: "\e92f"!important;}
+
+[data-value="Line"] .ui-icon-LineIcon,
+[data-value="Line"] .ui-icon-changeable:before,
+.ui-icon-LineIcon:before {content: "\e94d"!important;}
+
+.ui-icon-SettingsIcon:before {content: "\e94e"!important;}
+/* Chart Toolbar END */
+
