--- a/src/css/themes/metro/modules/infragistics.ui.chart.toolbar.less
+++ b/src/css/themes/metro/modules/infragistics.ui.chart.toolbar.less
@@ -1,30 +1,37 @@
 .financialChartToolbar .financialChartToolbar {
-  background: @chart-toolbar-background;
-  border-color: @chart-toolbar-border-color;
+  background: @chart-toolbar-background !important;
+  border-color: @chart-toolbar-border-color !important;
 
-  .ui-icon {
-    color: @text-color;
+  svg {
+    color: @text-color!important;
   }
 }
 
 .financialChartIndicatorMenuDropDownButton {
-  color: @text-color;
+  color: @text-color!important;
+
+  &:hover {
+    .ui-icon-toolbar-dd:before {
+      content: '';
+      border-color: @accent1 transparent transparent transparent!important;
+    }
+  }
 }
 
 .financialChartIndicatorMenu {
-  color: @text-color;
-  border-right-color:@chart-toolbar-border-color;
+  color: @text-color!important;
+  border-right-color:@chart-toolbar-border-color!important;
 
   &:hover {
     .financialChartIndicatorMenuDropDownButton,
     .financialChartIndicatorMenuDropDownButton:after {
-      color: @accent1;
+      color: @accent1!important;
     }
   }
 }
 
 .financialChartTypePicker {
-  border-left-color: @chart-toolbar-border-color;
+  border-left-color: @chart-toolbar-border-color!important;
 }
 
 // Range selector section
@@ -32,48 +39,57 @@
 .financialChartRangeSelectorLabel {
   &:hover {
     .financialChartRangeSelectorLabelSpan {
-      color: @accent1;
+      color: @accent1!important;
     }
   }
 }
 
 .financialChartRangeSelectorLabel input:checked + span {
-  color: @range-selector-active-color;
-  background-color: @range-selector-active-background;
+  color: @range-selector-active-color!important;
+  background-color: @range-selector-active-background!important;
 }
 
 .financialChartListItem {
   &:hover {
-    color: @accent1;
+    color: @accent1!important;
 
     .ui-icon {
-      color: @accent1;
+      color: @accent1!important;
     }
   }
 }
 
 .financialChartIndicatorMenuDropDownMenu,
 .financialChartTypePickerDropDownMenu {
-  background: @body-bg;
+  background: @body-bg!important;
 }
 
 .financialChartIndicatorMenuDropDownMenu li.checked,
 .financialChartTypePickerDropDownMenu li.checked {
-  color: @accent1;
+  color: @accent1!important;
   &:before {
-    color: @accent1;
+    color: @accent1!important;
   }
 
   &:hover,
   &:hover {
-    color: darken(@accent1, 10%);
+    color: darken(@accent1, 10%)!important;
   }
 }
 
 .financialChartTypePickerDropDownButton {
   &:hover {
     .ui-icon {
-      color: @accent1;
+      color: @accent1!important;
+    }
+    .ui-icon-toolbar-dd:before {
+      content: '';
+      border-color: @accent1 transparent transparent transparent!important;
     }
   }
 }
+
+.financialChartListItem[data-value='Auto'] {
+  border-bottom: 1px solid @chart-toolbar-border-color!important;
+}
+
